feat(testing): migrate @Prop to rule-driven matrix and fix paths
Move @Prop under Testing/Decorators/Prop with rules.json, coverage.js, generate-components.js, coverage-data.json, @Prop.mdx
Update Overview.mdx to import coverage-data.json
Fix Prop OUTPUT_DIR to test/wdio/prop/matrix; add test/wdio/prop/{matrix,tests}/.gitkeep
Update verify-matrix to read test/wdio/prop/matrix, scan tests, and write Prop/coverage-overlay.json
Pass modeLabel="Prop type" to RulesAtAGlance in @Prop.mdx
Seed Prop/coverage-overlay.json
Ensure aggregate generate-components includes prop

--- a/test/storybook/docs/Testing/Decorators/Overview.mdx
+++ b/test/storybook/docs/Testing/Decorators/Overview.mdx
@@ -1,5 +1,5 @@
 import componentData from './Component/coverage-data.json';
-import propData from './prop-coverage-data.json';
+import propData from './Prop/coverage-data.json';
 import stateData from './State/coverage-data.json';
 import eventData from './event-coverage-data.json';
 import listenData from './listen-coverage-data.json';
