Clean up the Overview docs

--- a/test/storybook/docs/Testing/Decorators/Overview.mdx
+++ b/test/storybook/docs/Testing/Decorators/Overview.mdx
@@ -124,7 +124,7 @@ Below are all the decorators provided by Stencil. Each decorator has a dedicated
   </ul>
 </div>
 
-## Coverage Summary
+## Generated Components Summary
 
 <div style={{ maxWidth: '100%', width: '100%', background: '#fff' }}>
   <table style={{ width: '100%', borderCollapse: 'collapse', tableLayout: 'fixed' }}>
@@ -135,7 +135,7 @@ Below are all the decorators provided by Stencil. Each decorator has a dedicated
     <thead>
       <tr>
         <th>Decorator</th>
-        <th style={{ textAlign: 'center' }}>Coverage Percentage</th>
+        <th style={{ textAlign: 'center' }}>Components Generated %</th>
       </tr>
     </thead>
     <tbody>
