--- a/test/storybook/docs/Testing/Decorators/Event/@Event.mdx
+++ b/test/storybook/docs/Testing/Decorators/Event/@Event.mdx
@@ -1,6 +1,6 @@
 import rules from './rules.json';
 import { Meta } from '@storybook/addon-docs/blocks';
-import data from '../event-coverage-data.json';
+import data from './coverage-data.json';
 import overlay from './coverage-overlay.json';
 import React, { useMemo, useState } from 'react';
 import RulesAtAGlance from '../_shared/RulesAtAGlance.jsx';
