--- a/test/storybook/docs/Testing/Decorators/Overview.mdx
+++ b/test/storybook/docs/Testing/Decorators/Overview.mdx
@@ -3,7 +3,7 @@ import propData from './Prop/coverage-data.json';
 import stateData from './State/coverage-data.json';
 import eventData from './Event/coverage-data.json';
 import listenData from './Listen/coverage-data.json';
-import methodData from './method-coverage-data.json';
+import methodData from './Method/coverage-data.json';
 
 # Decorator Testing Overview
 
