--- a/test/storybook/docs/.ai/testing/roadmap-2025.mdx
+++ b/test/storybook/docs/.ai/testing/roadmap-2025.mdx
@@ -1,6 +1,6 @@
 import { Meta } from '@storybook/addon-docs/blocks';
 
-<Meta title="Testing/Framework/Roadmap/2025" tags={['pending-review']} />
+<Meta title="Testing/Framework/Roadmap/2025" tags={['dev-only','pending-review']} />
 
 # Stencil.js Testing Roadmap 2025
 <div style={{display: 'inline-block', padding: '4px 12px', background: '#ffe066', color: '#7c5c00', borderRadius: '16px', fontWeight: 'bold', marginBottom: '16px'}}>⏳ Pending Review</div>
