--- a/test/storybook/docs/.ai/testing/context-pack.mdx
+++ b/test/storybook/docs/.ai/testing/context-pack.mdx
@@ -29,10 +29,8 @@ A portable, framework-agnostic package of prompts, policies, scripts, and docs t
    - All decorators: `npm run refresh-coverage-matrix`
    - Shortcut (refresh → generate → refresh): `npm run coverage-loop`
    - Specific decorator (examples): `npm run coverage-prop`, `npm run coverage-state`, `npm run coverage-listen`, `npm run coverage-event`
-5) Generation loop (preferred models):
-   - Use GPT-5 (Preview) for component/test generation
-   - Use GPT-4.1 for documentation
-   - Always reference `AGENT_KEYWORDS.md` for standardized prompts
+5) Verify matrices (scripted):
+   - Per-decorator: `npm run <decorator>:verify-matrix` (enforces parity, grouping, exclusivity; writes overlays)
 6) Build and run:
    - Build components: `npm run build-wdio-components`
    - Run tests: `npm run run-component-tests`
@@ -47,7 +45,7 @@ A portable, framework-agnostic package of prompts, policies, scripts, and docs t
 - After each batch:
   - `coverage.covered` increases by the number of new files
   - `.tsx` file count under the decorator folder equals `covered`
-- Manual verification: tweak a few options in generated files and confirm the coverage report updates
+- Verification is scripted: run `npm run <decorator>:verify-matrix` to enforce parity/grouping/exclusivity and write overlays; manual spot checks are optional
 
 ## Crowdsourcing workflow
 - Contributors run the loop, add missing permutations/tests, and open PRs
